 - Fixed an issue that prevented certain textboxes from being ignored.

Version 20080728.237 (Thursday, October 23, 2008)
 - Added functional support for SeaMonkey 2.0; the menus may not appear in some
   types of windows.
 - Added support for Firefox 3.1 beta 1, Fennec, BlueGriffon, Komodo IDE 5 alpha
   3, and the upcoming Songbird 1.0 release.
 - Reduced installer package size to August 2008 levels.
 - Corrected errors in the French localization.
 - Fixed an issue where entering "dcd" or "dmd" added a stroke on the "d".
 - Fixed an error in Zotero's Advanced Search dialog.
 - Added support for gadgets in Google Toolbar 5.
 - Added support for the ErrorZilla Plus, WebChunks, and pyshell extensions.

Version 20080728.250 (Sunday, November 2, 2008)
 - AVIM now works on all XUL windows and dialog boxes in the supported
   applications, whether built-in or provided by third-party extensions.
 - Added support for upcoming releases of Sunbird 1.0 and Spicebird 0.7.
 - Added Edit > Vietnamese Input menu to most SeaMonkey windows.
 - Reduced installer package size further by compressing JavaScript files. The
   original, uncompressed scripts can be found in AVIM's Subversion repository.

Version 20080728.265 (Monday, December 8, 2008)
 - Added support for Firefox 3.2 nightlies.
 - Fixed an issue in preference windows where AVIM prevents the initial pane
   from loading, due to Bug 330458.
 - Fixed an issue that prevented the toolbar buttons from displaying.
 - The toolbar buttons now appear disabled when AVIM is turned off.
 - XaLo's version of AVIM is now recognized and disabled.

Version ${Version} (${Date})
 - Added an option to allow diacritics in password boxes.
 - Fixed an issue where specialized textboxes would not update after editing a
   word that begins with an accented letter. Affected textboxes include the Find
   Bar and Location Bar in Firefox and the Subject bar in Thunderbird.
 - Fixed an issue where the option to use Telex while in Auto was mislabeled.