@@ -215,7 +215,9 @@ Version 20080728.265 (Monday, December 8, 2008)
 
 Version ${Version} (${Date})
  - Added an option to allow diacritics in password boxes.
+ - Fixed an issue where the option to use Telex while in Auto was mislabeled.
  - Fixed an issue where specialized textboxes would not update after editing a
    word that begins with an accented letter. Affected textboxes include the Find
    Bar and Location Bar in Firefox and the Subject bar in Thunderbird.
- - Fixed an issue where the option to use Telex while in Auto was mislabeled.
+ - Fixed an issue where bookmark properties would not save when edited from
+   within the Library.
